--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <div class="nav-buttons">
       <a href="modlists/skyrim.html" class="button">Skyrim Modlist</a>
       <a href="modlists/fallout.html" class="button">Fallout Modlist</a>
+	  <a href="modlists/fallout.html" class="button">Cyberpunk Modlist</a>
     </div>
   </div>
 </body>
