--- a/test/index.html
+++ b/test/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Mod List</title>
 <link rel="stylesheet" type="text/css" href="style.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-<script src="script.js"></script>
+<link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 <body>
+<header>
 <nav>
 <ul>
 <li><a href="index.html">Home</a></li>
@@ -16,10 +17,13 @@
 <li><a href="cyberpunk.html">Cyberpunk</a></li>
 </ul>
 </nav>
+</header>
 <main>
 <div id="modlist">
 <!-- Mod list will be added here dynamically -->
 </div>
 </main>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+<script src="js/skyrim.js"></script>
 </body>
 </html>
