--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
       <a href="modlists/fallout.html" class="button">Fallout Modlist</a>
 	  <a href="modlists/fallout.html" class="button">Cyberpunk Modlist</a>
     </div>
+	
+	<iframe class="videoplayer" src="http://www.twitch.tv/embed?channel=misterjinxy" height="478" width="800" frameborder="0" scrolling="no"></iframe>
   </div>
 </body>
 </html>
