--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	  <a href="modlists/fallout.html" class="button">Cyberpunk Modlist</a>
     </div>
 	
-	<iframe class="videoplayer" src="http://www.twitch.tv/embed?channel=misterjinxy" height="478" width="800" frameborder="0" scrolling="no"></iframe>
+	<iframe class="videoplayer" src="http://www.twitch.tv/embed?channel=HybridAvenger" height="478" width="800" frameborder="0" scrolling="no"></iframe>
   </div>
 </body>
 </html>
