--- a/index.html
+++ b/index.html
@@ -15,8 +15,7 @@
       <a href="modlists/fallout.html" class="button">Fallout Modlist</a>
 	  <a href="modlists/fallout.html" class="button">Cyberpunk Modlist</a>
     </div>
-	
-	<iframe class="videoplayer" src="http://www.twitch.tv/embed?channel=HybridAvenger" height="478" width="800" frameborder="0" scrolling="no"></iframe>
-  </div>
+	<div class='sk-ww-twitch-live-videos' data-embed-id='25469705'></div><script src='https://widgets.sociablekit.com/twitch-live-videos/widget.js' async defer></script>
+	</div>
 </body>
 </html>
